--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,30 +7,30 @@ name = "starvector"
 version = "1.0"
 description = "Generating Scalable Vector Graphics Code from Images and Text"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch==2.5.1", 
-    "torchvision==0.20.1",
-    "transformers==4.49.0", 
-    "tokenizers==0.21.1", 
-    "sentencepiece==0.2.0",    
+    "torch", 
+    "torchvision", 
+    "transformers", 
+    "tokenizers", 
+    "sentencepiece",    
     "accelerate",
-    "pydantic==2.10", 
+    "pydantic", 
     "markdown2[all]", 
-    "numpy<2.0.0", 
-    "scikit-learn==1.2.2",
-    "gradio==3.36.1", 
-    "gradio_client==0.2.9",
+    "numpy", 
+    "scikit-learn",
+    "gradio", 
+    "gradio_client",
     "requests", 
-    "httpx==0.24.0", 
+    "httpx", 
     "uvicorn", 
     "fastapi",
-    "svgpathtools==1.6.1", 
-    "seaborn==0.12.2",
+    "svgpathtools", 
+    "seaborn",
     "taming-transformers", 
     "lpips", 
     "cairosvg", 
@@ -46,14 +46,14 @@ dependencies = [
     "lxml", 
     "torch-fidelity", 
     "clip-openai",
-    "scipy==1.11.1",
+    "scipy", 
     "sentence-transformers",
     "reportlab",
     "svglib",
     "Pillow",
     "protobuf",
     "openai",
-    "flash_attn==2.7.3"
+    "flash_attn"
 
 ]
 
